--- a/about.html
+++ b/about.html
@@ -24,16 +24,102 @@
                      <!--nav element -->
            <div id="navelement"> 
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">Rreth Ne</a></li>
+            <li><a href="services.html">Sherbimet</a></li>
+            <li><a href="products.html">Produkte</a></li>
+            <li><a href="contact.html">Kontakti</a></li>
            </div>   <!--nav element -->
         </div>   <!--nav kryesor -->
         </ul>
     </nav>
 
     <div style="background-color: black; height: 2px;"></div>
+    
+    <div class="centered">Rreth Oda Construction </div>    
+    <img style="width: 1519px;" src="aboutcrop.jpg" alt="">
+
+  
+<div style="margin-top: 10px;  ">  <!--divkryesor -->
+    <div class="aboutus">
+           <h2>Mirë se vini në <br> Oda Construction</h2>
+           <hr style="width: 35px; border: 2px solid black;">
+           <p>Oda Construction, themeluar në vitin 2013,
+             fillimisht ofroi shërbime projektimi dhe më 
+             pas zgjerua me punime ndërtimore. Që nga viti
+              2016 operon në Gjilan, duke ofruar shitje dhe
+               instalim të membranave hidroizoluese. Në 2019
+                hapi një depo të dytë në Prishtinë, duke vazhduar
+                 me të njëjtën veprimtari.</p>
+    </div>
+
+
+    <div class="aboutus2">
+          <h2> Marrëdhëniet</h2>
+          <hr style="width: 35px; border: 2px solid black;">
+          <p>Ne i kuptojmë zgjedhjet e shumta që kanë pronarët e 
+            shtëpive për të punësuar një çati. Për këtë arsye, ne
+             jemi të përkushtuar të ofrojmë një përvojë nga fillimi 
+             në fund që klientët tanë të mrekullueshëm e meritojnë, 
+             dhe ne jemi mirënjohës që jemi në gjendje të ndërtojmë 
+             marrëdhënie në krahasim me ekzekutimin e transaksioneve.</p>
+    </div>
+
+
+    <div class="aboutus3">
+        <h2> Ekspertiza jonë</h2>
+        <hr style="width: 35px; border: 2px solid black;">
+        <p>Vizioni ynë është t'i shërbejmë komuniteteve tona 
+            duke ofruar përvojën më të mirë të klientit dhe 
+            duke ofruar mjeshtëri cilësore. Ne e kuptojmë se
+            sa e rëndësishme është për klientët tanë që fjalë
+            për fjalë "të mbajnë një çati mbi kokën e tyre". 
+            Prandaj, ata po investojnë në pjesën më të rëndësishme 
+            të shtëpisë së tyre, një çati që sjell vërtet paqe mendore.</p>
+  </div>
+
+
+  <div class="aboutus4">
+    <h2>Kujdesi jonë</h2>
+    <hr style="width: 35px; border: 2px solid black;">
+    <p>Ne jemi të ngazëllyer për numrin e familjeve që mund 
+        të ndihmojmë çdo vit duke mbajtur kaq shumë shtëpi 
+        të thata në Prishtinë dhe komunitetet përreth. Kjo 
+        është arsyeja pse ne jemi këtu për të edukuar klientët
+         tanë për rëndësinë e zgjedhjes së kompanisë së duhur.</p>
+</div>
+
+
+<div class="aboutus5">
+    <h2>Qëllimi ynë</h2>
+    <hr style="width: 35px; border: 2px solid black;">
+    <p>Our goal is to provide durable, high-quality roofing 
+        solutions with excellent craftsmanship and customer 
+        service. We prioritize timely delivery, sustainable 
+        practices, and building lasting trust through reliable,
+         innovative roofing services.</p>   
+</div>
+</div>   <!--divkryesor -->
+
+
+
+
+
+
+
+<div id="posht">
+    <footer>
+        <div class="footer-content">
+            <h2>Oda Construction</h2>
+            <p>&copy; 2023 Oda Construction. All rights reserved.</p>
+            <p>Established: 2010</p>
+            <p>Last Updated: September 2023</p>
+        </div>
+    </footer>
+</div>
+
+  
+
+
 
 
     
